resume/resume-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: resume-app
  labels:
    run: nginx
  name: nginx-deploy-resume
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-resume
      pod-label: nginx-resume-pod
  template:
    metadata:
      labels:
        run: nginx-resume
        pod-label: nginx-resume-pod
    spec:
      volumes:
      - name: resume-volume
        persistentVolumeClaim:
          claimName: resume-pvc
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: resume-volume
          mountPath: "/usr/share/nginx/html"
---
apiVersion: v1
kind: Service
metadata:
  name: resume-svc
  namespace: resume-app
  labels:
    app: nginx
spec:
  selector:
    pod-label: nginx-resume-pod
  ports:
  - protocol: TCP
    port: 80
