resume/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-resume-ingress
  namespace: resume-app
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: pavitra-pandey.ml
    http:
      paths:
      - backend:
          service:
            name: nginx-deploy-resume
            port: 
              number: 80
        path: /
        pathType: Prefix
